; ModuleID = '/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy-binlog.c_update_index.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy-binlog.c_update_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RPC_PROXY_INDEX_MAGIC = common dso_local global i32 0, align 4
@cur = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @update_index(i64 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @RPC_PROXY_INDEX_MAGIC, align 4
  %8 = load i32*, i32** @cur, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 0
  store i32 %7, i32* %9, align 4
  %10 = load i64, i64* %4, align 8
  %11 = load i32*, i32** @cur, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 1
  %13 = bitcast i32* %12 to i64*
  store i64 %10, i64* %13, align 8
  %14 = load i32, i32* %5, align 4
  %15 = load i32*, i32** @cur, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 3
  store i32 %14, i32* %16, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load i32*, i32** @cur, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 4
  store i32 %17, i32* %19, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
